Fix positioning on safari

--- a/app/frontend/components/dashboard/ProductRow/styles.module.scss
+++ b/app/frontend/components/dashboard/ProductRow/styles.module.scss
@@ -20,3 +20,7 @@
   color: var(--text-primary-color);
   text-decoration: underline;
 }
+
+.lastCell {
+  position: relative;
+}
